--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ header {
   background-color: #0000cc;
   color: white;
   border-style: solid;
+  border-width: 0px;
   border-bottom-width: 1px;
   border-color: red;
 
