--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ header {
   border-style: solid;
   border-width: 0px;
   border-bottom-width: 1px;
-  border-color: red;
+  border-color: #00004d;
 
 
 }
