--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,13 @@ header {
   color: white;
   border-style: solid;
   border-width: 0px;
-  border-bottom-width: 1px;
+  border-bottom-width: 2px;
   border-color: #00004d;
 
 
+}
+
+.light-section {
+  background-color:light-gray;
+  color:#191934;
 }
