--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ header {
   border-style: solid;
   border-width: 0px;
   border-bottom-width: 2px;
-  border-color: #00004d;
+  border-color: #3d4d5c;
 
 
 }
