--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,9 @@ header {
   background-color: #f2f2f2;
   color: #666666;
 }
+
+.dark-section {
+  background-color: #f2f2f2;
+  color: #666666;
+}
+
