--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,13 @@ header {
 .light-section {
   background-color: #f2f2f2;
   color: #666666;
+  padding: 10px;
 }
 
 .dark-section {
   background-color: #4d4d4d;
   color: #666666;
+   padding: 10px;
 }
 
 
