--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ header {
 }
 
 .dark-section {
-  background-color: #4d4d4d;
+  background-color: #f2f2f2;
   color: #666666;
    padding: 30px;
 }
