--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,8 @@ header {
 }
 
 .dark-section {
-  background-color: #f2f2f2;
-  color: #666666;
+  background-color: #4d4d4d;
+  color: #f2f2f2;
    padding: 30px;
 }
 
