--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ header {
 }
 
 .dark-section {
-  background-color: #737373;
+  background-color: #d9d9d9;
   color: #f2f2f2;
    padding: 30px;
 }
