--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 header {
   background-color: #004d99;
-  color: white;
+  color: #f2f2f2;
   border-style: solid;
   border-width: 0px;
   border-bottom-width: 2px;
