--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,12 @@ header {
   text-align: center;
 }
 
-header .btn {
+header button {
   margin-top: 40px;
   margin-bottom: 40px;
   margin-right: 40px;
+  background-color:#3d4d5c;
+  
   
 }
 
