--- a/styles.css
+++ b/styles.css
@@ -13,13 +13,15 @@ header button {
   margin-top: 40px;
   margin-bottom: 40px;
   margin-right: 40px;
-  background-color:#004d99;
+  background-color:#d9d9d9;
   border-style:solid;
   border-color:white;
   border-radius: 5px;
   padding:5px;
-  
-  
+}
+
+header button:hover {
+  background-color:#f2f2f2;
 }
 
 
