--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,8 @@ header button:hover {
 
 .social {
   margin:25px;
+  margin-left: auto;
+  margin-right: auto;
   
 }
 
@@ -35,6 +37,10 @@ header button:hover {
   background-color:red;
   border: none;
   color:white;
+  border-radius:10px;
+  font-size:25px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
