--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,8 @@ header button:hover {
   color:white;
   border-radius:10px;
   font-size:25px;
-  margin: auto;
+   float: none;
+  margin: 0 auto;
 
 
 }
