--- a/styles.css
+++ b/styles.css
@@ -32,13 +32,14 @@ header button:hover {
 }
 
 .donate {
-  background-color:red;
-  border: none;
+  background-color:#d92626;
+  border-style:solid;
+  border-width:2px;
+  border-color:#d9d9d9;
   color:white;
   border-radius:10px;
   font-size:25px;
-   float: none;
-  margin: 0 auto;
+  
 
 
 }
