--- a/styles.css
+++ b/styles.css
@@ -38,8 +38,9 @@ header button:hover {
   border-color:#d9d9d9;
   color:white;
   border-radius:10px;
-  font-size:25px;
+  font-size:40px;
   margin-top:80px;
+  padding: 20px;
   
 
 
