--- a/styles.css
+++ b/styles.css
@@ -35,11 +35,11 @@ header button:hover {
   background-color:#d92626;
   border-style:solid;
   border-width:2px;
-  border-color:#d9d9d9;
+  border-color:#666666;
   color:white;
   border-radius:10px;
   font-size:40px;
-  margin-top:80px;
+  margin-top:60px;
   padding: 20px;
   
 
