--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ header button:hover {
   background-color:#d92626;
   border-style:solid;
   border-width:2px;
-  border-color:#666666;
+  border-color:#d9d9d9;
   color:white;
   border-radius:10px;
   font-size:40px;
