--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,20 @@ header button:hover {
   color:white;
 }
 
+.header-donate {
+  border-color:#d92626;
+  color:#d92626;
+}
+
+.header-donate:hover {
+  border-color:red;
+  color:white;
+}
+
+
+
+
+
 .social {
   margin:25px;
   
