--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,19 @@ header button:hover {
   color:white;
 }
 
+.header-donate {
+  font-size:25px;
+  padding:10px;
+  background-color:#b94646;
+}
+
+.header-donate:hover {
+  border-color:red;
+  color:white;
+}
+
+
+
 
 .social {
   margin:25px;
@@ -33,7 +46,7 @@ header button:hover {
 }
 
 .donate {
-  background-color:#d92626;
+  background-color:#b94646;
   border-style:solid;
   border-width:2px;
   border-color:#d9d9d9;
@@ -44,15 +57,8 @@ header button:hover {
   padding: 20px;
   
 }
-.header-donate {
-  font-size:25px;
-  padding:0;
-}
 
-.header-donate:hover {
-  border-color:red;
-  color:white;
-}
+
 
 
 
