--- a/styles.css
+++ b/styles.css
@@ -29,13 +29,10 @@ header button:hover {
 .header-donate {
   font-size:25px;
   padding:10px;
-  background-color:#b94646;
+  background-color:#c63939;
 }
 
-.header-donate:hover {
-  border-color:red;
-  color:white;
-}
+
 
 
 
@@ -46,7 +43,7 @@ header button:hover {
 }
 
 .donate {
-  background-color:#b94646;
+  background-color:#c63939;
   border-style:solid;
   border-width:2px;
   border-color:#d9d9d9;
