--- a/styles.css
+++ b/styles.css
@@ -47,11 +47,17 @@ header button:hover {
   border-style:solid;
   border-width:2px;
   border-color:#d9d9d9;
-  color:white;
+  color:#f2f2f2;
   border-radius:10px;
   font-size:40px;
   margin-top:30px;
   padding: 20px;
+  
+}
+
+.donate:hover {
+  color:white;
+  background-color:red;
   
 }
 
