--- a/styles.css
+++ b/styles.css
@@ -7,39 +7,53 @@ header {
   border-color: #3d4d5c;
   font-family: serif;
   text-align: center;
+   
 }
 
 header button {
-  margin-top: 40px;
-  margin-bottom: 40px;
+  margin-top: 30px;
+  margin-bottom: 30px;
   margin-right: 40px;
   background-color:#004d99;
-  border-style:solid;
-  border-color:#d9d9d9;
+    border-style:none;
   border-radius: 5px;
   padding:5px;
-  color:#d9d9d9;
+  color:#f2f2f2;
 }
 
-header button:hover {
-  background-color:#c63939;
+
+
+header ul {
+    list-style: none;
+}
+
+header li {
+    display:inline-block;
+    font-size: 16px;
+    margin-top: 35px;
+    margin-bottom: 30px;
+    margin-right: 25px;
+    margin-left:25px;
+    
 }
 
 
 
 header a {
   text-decoration: none;
-    color:#d9d9d9;
+    color: #f2f2f2;
+     font-size: 16px;
+    
 }
 
 header a:hover {
-  text-decoration: none;
-    color:#d9d9d9;
+    text-decoration: none;
+    color:red;
 }
 
 
 .header-donate {
-  font-size:15px;
+  font-size:16px;
   padding:10px;
   background-color:#c63939;
 }
@@ -61,9 +75,7 @@ header a:hover {
 
 .donate {
   background-color:#c63939;
-  border-style:solid;
-  border-width:2px;
-  border-color:#d9d9d9;
+  border-style:none;
   color:#f2f2f2;
   border-radius:10px;
   font-size:40px;
@@ -91,8 +103,39 @@ header a:hover {
 }
 
 .endorsements-list {
-    text-align:center;
+    text-align:left;
+    width:100%;
+    display:block;
+    
+}
+
+form {
+    margin-top:50px;
+}
+
+input {
+    margin-bottom:30px;
+    
+}
+
+input[type=text] {
     width:100%;
 }
 
+input[type=checkbox] {
+    margin-top:30px;
+}
 
+input[type=submit] {
+    margin-top:30px;
+    width:20%
+    
+}
+
+
+
+
+textarea {
+    width: 100%;
+    height: 100px;
+}
